--- a/package.json
+++ b/package.json
@@ -17,16 +17,21 @@
     "start": "next start",
     "typecheck": "tsc --noEmit",
     "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
-    "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache"
+    "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
+    "db:seed": "tsx src/server/db/seed.ts",
+    "db:setup": "pnpm db:generate && pnpm db:push && pnpm db:seed"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.9.6",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "dotenv": "^16.4.7",
     "drizzle-orm": "^0.33.0",
     "geist": "^1.3.0",
     "next": "^15.0.1",
     "postgres": "^3.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "tsx": "^4.19.2",
     "zod": "^3.23.3"
   },
   "devDependencies": {
